Closed Bug 243249 Opened 21 years ago Closed 21 years ago

"Number of Visits" doesn't update live in bookmark info Status tab

Categories

(Camino Graveyard :: Bookmarks, defect)

PowerPC
macOS
defect
Not set
minor

Tracking

(Not tracked)

RESOLVED FIXED
Camino0.9

People

(Reporter: brion, Assigned: jaas)

Details

Attachments

(1 file)

User-Agent: Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.8a) Gecko/20040510 Camino/0.7+ Build Identifier: Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.8a) Gecko/20040510 Camino/0.7+ If I visit a bookmarked page while the Get Info palette is open for that bookmark, the Visits Count in the Status tab does not increase until I go back to the bookmark manager and either select another bookmark and go back to the first one or close and reopen the palette. Reproducible: Always Steps to Reproduce: 1. Open bookmark manager 2. Get Info on a bookmark 3. Click Status tab 4. Double-click the bookmark to open the page in the browser Actual Results: The Number of Visits does not visibly change in the still-open info palette. Expected Results: The Number of Visits should visibly increment. Mac OS 10.3.3
Assignee: pinkerton → josha
Confirmed using 2004050308 (v0.8b).
Status: UNCONFIRMED → NEW
Ever confirmed: true
Target Milestone: --- → Camino1.0
Attached patch live updatesSplinter Review
Does live updates of last visited time and number of visits.
moving this bug up to 0.9 to get it on the radar since it has a patch
Target Milestone: Camino1.0 → Camino0.9
Attachment #158062 - Flags: review?(me)
Comment on attachment 158062 [details] [diff] [review] live updates Looks good and works as advertised. r=me@mollyandgeoff.com
Attachment #158062 - Flags: review?(me) → review+
Attachment #158062 - Flags: review?(joshmoz)
Attachment #158062 - Flags: review?(joshmoz) → superreview?(pinkerton)
do we call |setBookmark:nil| before the window goes away, or unregister for the notification? if not, we should.
(In reply to comment #6) > do we call |setBookmark:nil| before the window goes away, or unregister for the > notification? if not, we should. I think we do that here: http://lxr.mozilla.org/mozilla/source/camino/src/bookmarks/BookmarkInfoController.mm#127
Comment on attachment 158062 [details] [diff] [review] live updates sr=pinkerton given on IRC
Attachment #158062 - Flags: superreview?(pinkerton) → superreview+
landed
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: