fix for bug 243249 - "Number of Visits" doesn't update live in bookmark info Status tab